Bug 481857 - Clicking on the top right corner of the screen no longer hits the close button for maximized or tiled native Wayland windows with Breeze titlebars
Summary: Clicking on the top right corner of the screen no longer hits the close butto...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: window decoration (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-02-26 12:33 UTC by Prajna Sariputra
Modified: 2024-05-28 08:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Prajna Sariputra 2024-02-26 12:33:50 UTC
SUMMARY
With Breeze and KDecoration from the Plasma/6.0 branch, if a window is maximized moving the cursor to the top right corner of the screen quickly and clicking no longer closes the window. This makes closing maximized windows with the mouse less convenient since accurate positioning of the cursor is now required instead of being able to take advantage of Fitts' law.

This is happening since https://invent.kde.org/plasma/kdecoration/-/merge_requests/56 and https://invent.kde.org/plasma/breeze/-/merge_requests/416 were merged. The master branch is not affected since the MRs were only applied for 6.0.


STEPS TO REPRODUCE
1. Build Breeze and KDecoration from the Plasma/6.0 branch
2. Open a window and maximize it
3. Move the cursor to the top right corner of the screen
4. Click

OBSERVED RESULT
The maximised window is not closed, and the close button on the titlebar is not highlighted.

EXPECTED RESULT
The maximised window is closed.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-02-26 15:35:37 UTC
Can confirm. Note that this issue is only about native Wayland windows at integer scale factors; Fractionally-scaled windows suffer from the same issue for different reasons; see Bug 459373 and Bug 480171.
Comment 2 Bug Janitor Service 2024-02-26 16:26:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/431
Comment 3 Akseli Lahtinen 2024-02-27 09:50:31 UTC
Git commit bbb930d3c67e4e2d9bcfb867a8a9a93ffbef005a by Akseli Lahtinen.
Committed on 27/02/2024 at 09:50.
Pushed by akselmo into branch 'Plasma/6.0'.

kdecoration: Fix topright corner click when using fractional scaling hack

Fixes the button click to take advantage of Fittz' law.

M  +3    -2    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/-/commit/bbb930d3c67e4e2d9bcfb867a8a9a93ffbef005a
Comment 4 Bug Janitor Service 2024-05-27 13:54:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/463
Comment 5 Akseli Lahtinen 2024-05-28 08:16:26 UTC
Git commit 2761c75571cdd4c432b53eabed3373e309d73adc by Akseli Lahtinen.
Committed on 28/05/2024 at 08:16.
Pushed by akselmo into branch 'Plasma/6.1'.

Fractional scaling hack: Expand border on bottom and right, set decoration name to "breeze"

Hack for Plasma 6.1 until fractional scaling borders are fixed.

Backport of https://invent.kde.org/plasma/breeze/-/merge_requests/416

Move additions to left and right int to fix KWin tests

This should fix any accidental gaps with maximized window
and fix tests with KWin

kdecoration: Fix topright corner click when using fractional scaling hack

Fixes the button click to take advantage of Fittz' law.

Requires https://invent.kde.org/plasma/kdecoration/-/merge_requests/65

M  +14   -9    kdecoration/breezedecoration.cpp

https://invent.kde.org/plasma/breeze/-/commit/2761c75571cdd4c432b53eabed3373e309d73adc