kdecoration: Fix topright corner click when using fractional scaling hack

Fixes the button click to take advantage of Fittz' law.


BUG:481857